# perspectives-on-intelligence

./: .gitignore  README.md  pyproject.toml
src/survey/: analysis.py  data.py  data_mappings.py  demo_mappings.py  report.py  visualize.ipynb  visualize.py
supplementary/: data.csv
